--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,10 +1,10 @@
 # Where the homeserver's Client-Server API is located. Typically this
 # is where clients would be connecting to in order to send messages.
-homeserverUrl: "https://matrix.org"
+homeserverUrl: "https://matrix.kodownik.co"
 
 # An access token for the bot to use. Learn how to get an access token
 # at https://t2bot.io/docs/access_tokens
-accessToken: "YOUR_TOKEN_HERE"
+accessToken: "syt_c3RlZmFuaWE_xMeWAqPaQnmuSipqDXlV_3lhfYj"
 
 # Whether or not to autojoin rooms when invited.
 autoJoin: true
@@ -14,4 +14,4 @@ dataPath: "storage"
 
 # Set to false to disable encryption support. Encrypted data will be
 # stored under dataPath.
-encryption: true
+encryption: false
