--- a/package.json
+++ b/package.json
@@ -21,17 +21,32 @@
   "scripts": {
     "build": "tsc",
     "lint": "tslint --project ./tsconfig.json -t stylish",
-    "start:dev": "npm run build && node lib/index.js"
+    "start:dev": "tsx -r dotenv/config src/index.ts"
   },
   "dependencies": {
     "config": "^3.3.6",
+    "devextreme-showdown": "^1.0.1",
     "escape-html": "^1.0.3",
+    "highlight.js": "^11.9.0",
+    "html-escaper": "^3.0.3",
     "js-yaml": "^4.1.0",
-    "matrix-bot-sdk": "^0.6.0-beta.4"
+    "langchain": "^0.1.26",
+    "markdown-it": "^14.0.0",
+    "matrix-bot-sdk": "^0.7.1",
+    "postgres": "^3.4.3"
   },
   "devDependencies": {
-    "@types/node": "^14.18.5",
+    "@tsconfig/recommended": "^1.0.3",
+    "@types/express": "^4.17.21",
+    "@types/markdown-it": "^13.0.7",
+    "@types/node": "^20.11.26",
+    "dotenv": "^16.0.3",
+    "i": "^0.3.7",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.5.4"
+    "tsx": "^4.7.1",
+    "typescript": "^4.9.5"
   }
 }
