--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 config/*
 !config/default.yaml
 lib/
-storage/
+storage1/
 
 /.idea
 
@@ -29,7 +29,7 @@ coverage
 # nyc test coverage
 .nyc_output
 
-# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
+# Grunt intermediate storage1 (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
 # Bower dependency directory (https://bower.io/)
