--- a/config/default.yaml
+++ b/config/default.yaml
@@ -5,6 +5,8 @@ homeserverUrl: "https://matrix.kodownik.co"
 # An access token for the bot to use. Learn how to get an access token
 # at https://t2bot.io/docs/access_tokens
 accessToken: "syt_c3RlZmFuaWE_xMeWAqPaQnmuSipqDXlV_3lhfYj"
+#accessToken: "syt_ZWVl_wuNSSLhsiCniqiemMQyE_4Vu6fz"
+#  accessToken: "syt_ZQ_JetdVgnUurzyGqQXZMyq_0hQvmX"
 
 # Whether or not to autojoin rooms when invited.
 autoJoin: true
@@ -14,4 +16,7 @@ dataPath: "storage"
 
 # Set to false to disable encryption support. Encrypted data will be
 # stored under dataPath.
-encryption: false
+encryption: true
+
+#username: "eee"
+#password: "aScenSuS#21"
